@@ -107,7 +107,7 @@ class Trek(PicturesMixin, MapEntityMixin, Topology):
     access = models.TextField(verbose_name=_(u"Access"), blank=True, db_column='acces',
                               help_text=_(u"Best way to go"))
     disabled_infrastructure = models.TextField(verbose_name=_(u"Disabled infrastructure"), db_column='handicap',
-                                               help_text=_(u"Any specific infrastructure"))
+                                               blank=True, help_text=_(u"Any specific infrastructure"))
     duration = models.FloatField(verbose_name=_(u"Duration"), default=0, blank=True, null=True, db_column='duree',
                                  help_text=_(u"In hours"))
     is_park_centered = models.BooleanField(verbose_name=_(u"Is in the midst of the park"), db_column='coeur',
