@@ -7,6 +7,9 @@ CHANGELOG
 -----------------
 
 * Edit difficulty id in Admin site, mainly used to order difficulty levels (fixes #771)
+* Use explicit list of fields in forms, instead of excluding model fields (fixes #736).
+  Issue #712 was closed too, since most suspected cause was field listings. Please re-open 
+  if problem re-appears.
 
 
 0.19.1 (2013-07-15)
